# sound-realty-properties-estimator

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test-api.yml
app/: main.py
app/data/: data.py
app/models/: prop_estimator_model.py
app/services/: __init__.py  prop_estimator_input.py  prop_estimator_output.py
app/tests/: prop_estimator_test.py
base_code/: evaluate.ipynb
