[project]
name = "sound-realty-properties-estimator"
version = "0.1.0"
description = ""
authors = [
    {name = "Eugenia Pais",email = "mariaeugeniapais@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pandas (==2.1.1)",
    "scikit-learn (==1.3.1)",
    "debugpy (>=1.8.13,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.2.1,<4.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
